2003-04-14 garlick
    * Renamed "plugcount" to "maxplugcount" in device configurations.
    * Renamed "map" to "setstatus" in device configurations.
    * Moved regex subexpression match buffer to the device structure.  There
      will be a persistant copy per device so $N can reference the most recent
      expect results from a seperate statement.
    * Make "setstatus" its own statement and change to work as follows -
      "setstatus [plugname] status", where status is a regex match, and name
      can be a regex match or a literal plug name in quotes.  If omitted,
      the plug name defaults to the current target.
    * Add "setplugname" statement, "setplugname nodename plugname", where
      both args are regex matches.  Rework plug/node logic so plug names must
      either be defined in powerman.conf so that they match the plug names
      in the device config, or they are omitted along with the device config
      plug names.  In the latter case, the plug names must come from a 
      setplugname statement in a device script.

2003-04-13 garlick
    * README: began update for 1.0.17 release.

2003-04-12 garlick
    * If no plugs defined in device config, allow the plug names to come from
      the node config lines.
    * Implement TELNET_DEV and remove all the telnet escapes from device
      configurations.
    * Split tcp, serial, and telnet device types off to seperate files.

2003-04-10 garlick
    * Moved ibmasm.dev to ibmrsa.dev and implemented first cut on RSA telnet
      protocol.

2003-03-31 garlick
    * Adjust power cycle for all devices to wait at least 2 sec between off/on.
      Was 0.7sec on icebox and this seemed to cause initialization problems 
      with SuperMicro P4DPR motherboards running LinuxBIOS.

2002-01-20 garlick
    * Make serial connections non-blocking.

2002-01-20 garlick  
    * Back out beacon change that requires B70 of ice box v3 firmware.
      Now we will work with all versions.
    * Check aliases for bogus nodes