@@ -45,15 +45,15 @@
 #include "wrappers.h"
 
 /* prototypes for parse handler routines */
-static char *makeNode(char *nodestr, char *devstr, char *plugstr);
-static char *makeAlias(char *namestr, char *hostsstr);
-static char *makeDevice(char *devstr, char *specstr, char *hoststr, 
+static void makeNode(char *nodestr, char *devstr, char *plugstr);
+static void makeAlias(char *namestr, char *hostsstr);
+static void makeDevice(char *devstr, char *specstr, char *hoststr, 
                         char *portstr);
 static char *makePlugNameLine(char *plugstr);
 
-static char *makeScriptSec(int com);
+static char *makeScript(int com, List prestmts);
 
-static char *makeStmt(StmtType type, char *str, char *tvstr, 
+static PreStmt *makeStmt(StmtType type, char *str, char *tvstr, 
                       char *mp1str, char *mp2str);
 
 static char *makeSpecSize(char *sizestr);
@@ -61,14 +61,14 @@ static char *makeSpecOn(char *s2);
 static char *makeSpecOff(char *s2);
 static char *makeSpecType(char *s2);
 static char *makeSpecName(char *s2);
-static Spec *check_Spec();
-static char *makeClientPort(char *s2);
+static void makeSpec();
+static void makeClientPort(char *s2);
 static char *makeDevTimeout(char *s2);
 static char *makePingPeriod(char *s2);
-static char *makeTCPWrappers(bool val);
 
 extern int yylex();
 void yyerror();
+
 static void _errormsg(char *msg);
 static void _warnmsg(char *msg);
 static long _strtolong(char *str);
@@ -76,74 +76,38 @@ static double _strtodouble(char *str);
 static void _doubletotv(struct timeval *tv, double val);
 
  Spec *current_spec = NULL;  /* Holds a Spec as it is built */
- Script current_script = NULL; /* Holds a script as it is built */
 %}
 
-/* BISON Declatrations */
+/* script names */
+%token TOK_LOGIN TOK_LOGOUT TOK_STATUS TOK_STATUS_ALL
+%token TOK_STATUS_SOFT TOK_STATUS_SOFT_ALL TOK_STATUS_TEMP TOK_STATUS_TEMP_ALL
+%token TOK_STATUS_BEACON TOK_STATUS_BEACON_ALL TOK_BEACON_ON TOK_BEACON_OFF
+%token TOK_ON TOK_ON_ALL TOK_OFF TOK_OFF_ALL TOK_CYCLE TOK_CYCLE_ALL TOK_RESET
+%token TOK_RESET_ALL TOK_PING TOK_SPEC 
 
-%token TOK_TCP_WRAPPERS
-%token TOK_PORT
+/* script statements */
+%token TOK_EXPECT TOK_SETSTATUS TOK_SETPLUGNAME TOK_SEND TOK_DELAY
 
-%token TOK_SPEC_NAME
-%token TOK_SPEC_TYPE
-%token TOK_OFF_STRING
-%token TOK_ON_STRING
-%token TOK_MAX_PLUG_COUNT
-%token TOK_TIMEOUT
-%token TOK_DEV_TIMEOUT
-%token TOK_PING_PERIOD
+/* other device configuration stuff */
+%token TOK_SPEC_NAME TOK_SPEC_TYPE TOK_OFF_STRING TOK_ON_STRING
+%token TOK_MAX_PLUG_COUNT TOK_TIMEOUT TOK_DEV_TIMEOUT TOK_PING_PERIOD
+%token TOK_PLUG_NAME TOK_SCRIPT 
 
-%token TOK_EXPECT
-%token TOK_SETSTATUS
-%token TOK_SETPLUGNAME
-%token TOK_MATCHPOS
-%token TOK_SEND
-%token TOK_DELAY
+/* powerman.conf stuff */
+%token TOK_DEVICE TOK_NODE TOK_ALIAS TOK_TCP_WRAPPERS TOK_PORT
 
-%token TOK_SCRIPT
-%token TOK_LOGIN
-%token TOK_LOGOUT
-%token TOK_STATUS
-%token TOK_STATUS_ALL
-%token TOK_STATUS_SOFT
-%token TOK_STATUS_SOFT_ALL
-%token TOK_STATUS_TEMP
-%token TOK_STATUS_TEMP_ALL
-%token TOK_STATUS_BEACON
-%token TOK_STATUS_BEACON_ALL
-%token TOK_BEACON_ON
-%token TOK_BEACON_OFF
-%token TOK_ON
-%token TOK_ON_ALL
-%token TOK_OFF
-%token TOK_OFF_ALL
-%token TOK_CYCLE
-%token TOK_CYCLE_ALL
-%token TOK_RESET
-%token TOK_RESET_ALL
-%token TOK_PING
-%token TOK_SPEC
-%right TOK_DEVICE
-
-%token TOK_PLUG_NAME
-%token TOK_NODE
-%token TOK_ALIAS
-
+/* general */
+%token TOK_MATCHPOS 
 %token TOK_STRING_VAL
 %token TOK_NUMERIC_VAL
 %token TOK_YES
 %token TOK_NO
 %token TOK_BEGIN
 %token TOK_END
-
 %token TOK_UNRECOGNIZED
 
 /* deprecated in 1.0.16 */
-%token TOK_B_NODES
-%token TOK_E_NODES
-%token TOK_B_GLOBAL
-%token TOK_E_GLOBAL
-%token TOK_OLD_PORT
+%token TOK_B_NODES TOK_E_NODES TOK_B_GLOBAL TOK_E_GLOBAL TOK_OLD_PORT
 
 %%
 /* Grammar Rules for the powerman.conf config file */
@@ -176,33 +140,33 @@ deprecated      : TOK_B_NODES   {
 ;
 TCP_wrappers    : TOK_TCP_WRAPPERS         { 
     _warnmsg("'tcpwrappers' without yes|no"); 
-    makeTCPWrappers(TRUE); 
+    conf_set_use_tcp_wrappers(TRUE);
 }               | TOK_TCP_WRAPPERS TOK_YES { 
-    makeTCPWrappers(TRUE);  
+    conf_set_use_tcp_wrappers(TRUE);
 }               | TOK_TCP_WRAPPERS TOK_NO  { 
-    makeTCPWrappers(FALSE); 
+    conf_set_use_tcp_wrappers(FALSE);
 }
 ;
 client_port     : TOK_PORT TOK_NUMERIC_VAL {
-    $$ = (char *)makeClientPort($2);
+    makeClientPort($2);
 }               | TOK_OLD_PORT TOK_NUMERIC_VAL {
     _warnmsg("'client listener' not needed");
-    $$ = (char *)makeClientPort($2);
+    makeClientPort($2);
 }
 ;
 device          : TOK_DEVICE TOK_STRING_VAL TOK_STRING_VAL TOK_STRING_VAL 
-                  TOK_STRING_VAL %prec TOK_DEVICE {
-    $$ = (char *)makeDevice($2, $3, $4, $5);
+                  TOK_STRING_VAL {
+    makeDevice($2, $3, $4, $5);
 }
 ;
 node            : TOK_NODE TOK_STRING_VAL TOK_STRING_VAL TOK_STRING_VAL {
-    $$ = (char *)makeNode($2, $3, $4);
+    makeNode($2, $3, $4);
 }               | TOK_NODE TOK_STRING_VAL TOK_STRING_VAL {
-    $$ = (char *)makeNode($2, $3, NULL);
+    makeNode($2, $3, NULL);
 }
 ;
 alias           : TOK_ALIAS TOK_STRING_VAL TOK_STRING_VAL {
-    $$ = (char *)makeAlias($2, $3);
+    makeAlias($2, $3);
 }
 ;
 /**************************************************************/
@@ -217,7 +181,7 @@ spec            : TOK_SPEC TOK_BEGIN
                   spec_stmt_list 
                   plug_name_sec 
                   TOK_END {
-    $$ = (char *)check_Spec();
+    makeSpec();
 }
 ;
 spec_name_line  : TOK_SPEC_NAME TOK_STRING_VAL {
@@ -260,100 +224,102 @@ dev_timeout     : TOK_PING_PERIOD TOK_NUMERIC_VAL {
 spec_stmt_list : spec_stmt_list spec_script 
                 | spec_script 
 ;
-spec_script     : TOK_SCRIPT TOK_LOGIN TOK_BEGIN stmt_list TOK_END {
-    $$ = (char *)makeScriptSec(PM_LOG_IN);
+spec_script     : TOK_SCRIPT TOK_LOGIN stmt_block {
+    $$ = (char *)makeScript(PM_LOG_IN, (List)$3);
 }
-                | TOK_SCRIPT TOK_LOGOUT TOK_BEGIN stmt_list TOK_END {
-    $$ = (char *)makeScriptSec(PM_LOG_OUT);
+                | TOK_SCRIPT TOK_LOGOUT stmt_block {
+    $$ = (char *)makeScript(PM_LOG_OUT, (List)$3);
 }
-                | TOK_SCRIPT TOK_STATUS TOK_BEGIN stmt_list TOK_END {
-    $$ = (char *)makeScriptSec(PM_STATUS_PLUGS);
+                | TOK_SCRIPT TOK_STATUS stmt_block {
+    $$ = (char *)makeScript(PM_STATUS_PLUGS, (List)$3);
 } 
-                | TOK_SCRIPT TOK_STATUS_ALL TOK_BEGIN stmt_list TOK_END {
-    $$ = (char *)makeScriptSec(PM_STATUS_PLUGS_ALL);
+                | TOK_SCRIPT TOK_STATUS_ALL stmt_block {
+    $$ = (char *)makeScript(PM_STATUS_PLUGS_ALL, (List)$3);
 } 
-                | TOK_SCRIPT TOK_STATUS_SOFT TOK_BEGIN stmt_list TOK_END {
-    $$ = (char *)makeScriptSec(PM_STATUS_NODES);
+                | TOK_SCRIPT TOK_STATUS_SOFT stmt_block {
+    $$ = (char *)makeScript(PM_STATUS_NODES, (List)$3);
 }
-                | TOK_SCRIPT TOK_STATUS_SOFT_ALL TOK_BEGIN stmt_list TOK_END {
-    $$ = (char *)makeScriptSec(PM_STATUS_NODES_ALL);
+                | TOK_SCRIPT TOK_STATUS_SOFT_ALL stmt_block {
+    $$ = (char *)makeScript(PM_STATUS_NODES_ALL, (List)$3);
 }
-                | TOK_SCRIPT TOK_STATUS_TEMP TOK_BEGIN stmt_list TOK_END {
-    $$ = (char *)makeScriptSec(PM_STATUS_TEMP);
+                | TOK_SCRIPT TOK_STATUS_TEMP stmt_block {
+    $$ = (char *)makeScript(PM_STATUS_TEMP, (List)$3);
 }
-                | TOK_SCRIPT TOK_STATUS_TEMP_ALL TOK_BEGIN stmt_list TOK_END {
-    $$ = (char *)makeScriptSec(PM_STATUS_TEMP_ALL);
+                | TOK_SCRIPT TOK_STATUS_TEMP_ALL stmt_block {
+    $$ = (char *)makeScript(PM_STATUS_TEMP_ALL, (List)$3);
 }
-                | TOK_SCRIPT TOK_STATUS_BEACON TOK_BEGIN stmt_list TOK_END {
-    $$ = (char *)makeScriptSec(PM_STATUS_BEACON);
+                | TOK_SCRIPT TOK_STATUS_BEACON stmt_block {
+    $$ = (char *)makeScript(PM_STATUS_BEACON, (List)$3);
 }
-                | TOK_SCRIPT TOK_STATUS_BEACON_ALL TOK_BEGIN stmt_list TOK_END {
-    $$ = (char *)makeScriptSec(PM_STATUS_BEACON);
+                | TOK_SCRIPT TOK_STATUS_BEACON_ALL stmt_block {
+    $$ = (char *)makeScript(PM_STATUS_BEACON, (List)$3);
 }
-                | TOK_SCRIPT TOK_BEACON_ON TOK_BEGIN stmt_list TOK_END {
-    $$ = (char *)makeScriptSec(PM_BEACON_ON);
+                | TOK_SCRIPT TOK_BEACON_ON stmt_block {
+    $$ = (char *)makeScript(PM_BEACON_ON, (List)$3);
 }
-                | TOK_SCRIPT TOK_BEACON_OFF TOK_BEGIN stmt_list TOK_END {
-    $$ = (char *)makeScriptSec(PM_BEACON_OFF);
+                | TOK_SCRIPT TOK_BEACON_OFF stmt_block {
+    $$ = (char *)makeScript(PM_BEACON_OFF, (List)$3);
 }
-                | TOK_SCRIPT TOK_ON TOK_BEGIN stmt_list TOK_END {
-    $$ = (char *)makeScriptSec(PM_POWER_ON);
+                | TOK_SCRIPT TOK_ON stmt_block {
+    $$ = (char *)makeScript(PM_POWER_ON, (List)$3);
 }
-                | TOK_SCRIPT TOK_ON_ALL TOK_BEGIN stmt_list TOK_END {
-    $$ = (char *)makeScriptSec(PM_POWER_ON_ALL);
+                | TOK_SCRIPT TOK_ON_ALL stmt_block {
+    $$ = (char *)makeScript(PM_POWER_ON_ALL, (List)$3);
 }
-                | TOK_SCRIPT TOK_OFF TOK_BEGIN stmt_list TOK_END {
-    $$ = (char *)makeScriptSec(PM_POWER_OFF);
+                | TOK_SCRIPT TOK_OFF stmt_block {
+    $$ = (char *)makeScript(PM_POWER_OFF, (List)$3);
 }
-                | TOK_SCRIPT TOK_OFF_ALL TOK_BEGIN stmt_list TOK_END {
-    $$ = (char *)makeScriptSec(PM_POWER_OFF_ALL);
+                | TOK_SCRIPT TOK_OFF_ALL stmt_block {
+    $$ = (char *)makeScript(PM_POWER_OFF_ALL, (List)$3);
 }
-                | TOK_SCRIPT TOK_CYCLE TOK_BEGIN stmt_list TOK_END {
-    $$ = (char *)makeScriptSec(PM_POWER_CYCLE);
+                | TOK_SCRIPT TOK_CYCLE stmt_block {
+    $$ = (char *)makeScript(PM_POWER_CYCLE, (List)$3);
 }
-                | TOK_SCRIPT TOK_CYCLE_ALL TOK_BEGIN stmt_list TOK_END {
-    $$ = (char *)makeScriptSec(PM_POWER_CYCLE_ALL);
+                | TOK_SCRIPT TOK_CYCLE_ALL stmt_block {
+    $$ = (char *)makeScript(PM_POWER_CYCLE_ALL, (List)$3);
 }
-                | TOK_SCRIPT TOK_RESET TOK_BEGIN stmt_list TOK_END {
-    $$ = (char *)makeScriptSec(PM_RESET);
+                | TOK_SCRIPT TOK_RESET stmt_block {
+    $$ = (char *)makeScript(PM_RESET, (List)$3);
 }
-                | TOK_SCRIPT TOK_RESET_ALL TOK_BEGIN stmt_list TOK_END {
-    $$ = (char *)makeScriptSec(PM_RESET_ALL);
+                | TOK_SCRIPT TOK_RESET_ALL stmt_block {
+    $$ = (char *)makeScript(PM_RESET_ALL, (List)$3);
 }
-                | TOK_SCRIPT TOK_PING TOK_BEGIN stmt_list TOK_END {
-    $$ = (char *)makeScriptSec(PM_PING);
+                | TOK_SCRIPT TOK_PING stmt_block {
+    $$ = (char *)makeScript(PM_PING, (List)$3);
 }
 ;
-stmt_list     : stmt_list stmt
-                | stmt
+stmt_block      : TOK_BEGIN stmt_list TOK_END {
+    $$ = $2;
+}
+;
+stmt_list       : stmt_list stmt { 
+    list_append((List)$1, $2); 
+    $$ = $1; 
+}               
+                | stmt { 
+    $$ = (char *)list_create((ListDelF)conf_prestmt_destroy);
+    list_append((List)$$, $1); 
+}
 ;
 stmt            : TOK_EXPECT TOK_STRING_VAL {
-    /* expect "str" */
-    /* makeStmt(type, str, tv, mp1(plug), mp2(stat/node) */
     $$ = (char *)makeStmt(STMT_EXPECT, $2, NULL, NULL, NULL);
 }
                 | TOK_SEND TOK_STRING_VAL {
-    /* send "fmt" */
     $$ = (char *)makeStmt(STMT_SEND, $2, NULL, NULL, NULL);
 }
                 | TOK_DELAY TOK_NUMERIC_VAL {
-    /* delay secs */
     $$ = (char *)makeStmt(STMT_DELAY, NULL, $2, NULL, NULL);
 }
                 | TOK_SETPLUGNAME TOK_MATCHPOS TOK_NUMERIC_VAL TOK_MATCHPOS TOK_NUMERIC_VAL {
-    /* setplugname $m(node) $n(plug) */
     $$ = (char *)makeStmt(STMT_SETPLUGNAME, NULL, NULL, $5, $3);
 }
                 | TOK_SETSTATUS TOK_STRING_VAL TOK_MATCHPOS TOK_NUMERIC_VAL {
-    /* setstatus "plug" $n */
     $$ = (char *)makeStmt(STMT_SETSTATUS, $2, NULL, NULL, $4);
 }
                 | TOK_SETSTATUS TOK_MATCHPOS TOK_NUMERIC_VAL TOK_MATCHPOS TOK_NUMERIC_VAL {
-    /* setstatus $m $n */
     $$ = (char *)makeStmt(STMT_SETSTATUS, NULL, NULL, $3, $5);
 }
                 | TOK_SETSTATUS TOK_MATCHPOS TOK_NUMERIC_VAL {
-    /* setstatus $n */
     $$ = (char *)makeStmt(STMT_SETSTATUS, NULL, NULL, NULL, $3);
 }
 ;
@@ -391,20 +357,13 @@ int parse_config_file (char *filename)
     return 0;
 } 
 
-static char *makeTCPWrappers(bool val)
-{
-    conf_set_use_tcp_wrappers(val);
-    return NULL;
-}
-
-static char *makeClientPort(char *s2)
+static void makeClientPort(char *s2)
 {
     int port = _strtolong(s2);
 
     if (port < 1024)
         _errormsg("bogus client listener port");
     conf_set_listen_port(port); 
-    return s2;
 }
 
 static void _spec_missing(char *msg)
@@ -416,7 +375,7 @@ static void _spec_missing(char *msg)
 /*
  * We've got a whole Spec now so do some sanity checks.
  */
-static Spec *check_Spec()
+static void makeSpec(void)
 {
     Spec *this_spec;
     char *name;
@@ -434,7 +393,6 @@ static Spec *check_Spec()
     conf_add_spec(current_spec);
     this_spec = current_spec;
     current_spec = NULL;
-    return this_spec;
 }
 
 static char *makeSpecName(char *s2)
@@ -505,31 +463,24 @@ static char *makePingPeriod(char *s2)
 }
 
 /* makeStmt(type, str, tv, mp1(plug), mp2(stat/node) */
-static char *makeStmt(StmtType type, char *str, char *tvstr, 
+static PreStmt *makeStmt(StmtType type, char *str, char *tvstr, 
                       char *mp1str, char *mp2str)
 {
-    PreStmt *specl;
-    struct timeval tv;
     int mp1 = mp1str ? _strtolong(mp1str) : -1;
     int mp2 = mp2str ? _strtolong(mp2str) : -1;
+    struct timeval tv;
 
     if (tvstr)
         _doubletotv(&tv, _strtodouble(tvstr));
 
-    specl = conf_prestmt_create(type, str, tv, mp1, mp2);
-    
-    if (current_script == NULL)
-        current_script = list_create((ListDelF) conf_prestmt_destroy);
-    list_append(current_script, specl);
-    return str;
+    return conf_prestmt_create(type, str, tv, mp1, mp2);
 }
 
-static char *makeScriptSec(int com)
+static char *makeScript(int com, List prestmts)
 {
     if( current_spec->prescripts[com] != NULL )
         _errormsg("duplicate script");
-    current_spec->prescripts[com] = current_script;
-    current_script = NULL;
+    current_spec->prescripts[com] = prestmts;
     return NULL;
 }
     
@@ -555,7 +506,7 @@ static char *makePlugNameLine(char *plugstr)
 /*
  * We've hit a Device line - build complete Device structure.
  */   
-static char *makeDevice(char *devstr, char *specstr, char *hoststr, 
+static void makeDevice(char *devstr, char *specstr, char *hoststr, 
                         char *portstr)
 {
     Device *dev;
@@ -620,17 +571,15 @@ static char *makeDevice(char *devstr, char *specstr, char *hoststr,
     }
 
     dev_add(dev);
-    return devstr;
 }
 
-static char *makeAlias(char *namestr, char *hostsstr)
+static void makeAlias(char *namestr, char *hostsstr)
 {
     if (!conf_add_alias(namestr, hostsstr))
         _errormsg("bad alias");
-    return namestr;
 }
 
-static char *makeNode(char *nodestr, char *devstr, char *plugstr)
+static void makeNode(char *nodestr, char *devstr, char *plugstr)
 {
     Plug *plug;
     Device *dev;
@@ -669,7 +618,6 @@ static char *makeNode(char *nodestr, char *devstr, char *plugstr)
 
         plug->node = Strdup(nodestr);
     }
-    return nodestr;
 }
 
 static double _strtodouble(char *str)
